# multi-agent-stock-analysis

./: Dockerfile  INVESTMENT_RECOMMENDATION_AAPL.txt  INVESTMENT_RECOMMENDATION_TSLA.txt  README.md  investment_report_AAPL.md  investment_report_AMZN.md  investment_report_GOOGL.md  investment_report_META.md  investment_report_MSFT.md  investment_report_NFLX.md  investment_report_NVDA.md  main.py  pyproject.toml
frontend/: app.py  index.html
src/agents/: agents.py  crew.py  tasks.py
src/agents/tools/: financial.py  scraper.py
src/api/: main.py  models.py  routes.py
src/shared/: config.py  database.py  storage.py
